--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,7 @@
 <body>
         <div class="main-content">
         {{>header}}
-    <p>This is the {{title}}</p>
+    <p>This site uses data from mapbox.com and weatherstack.com.</p>
     <img class="portrait" src="./img/IMG_0467.JPG" alt="" srcset="">
         </div>
             {{>footer}}
