--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,7 @@
         <div class="main-content">
         {{>header}}
     <p>This site uses data from mapbox.com and weatherstack.com.</p>
-    <img class="portrait" src="./img/IMG_0467.JPG" alt="" srcset="">
+    {{!-- <img class="portrait" src="./img/IMG_0467.JPG" alt="" srcset=""> --}}
         </div>
             {{>footer}}
 </body>
